--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
                 <div class="gal-item">
                     <img src="img/Gellery 6.webp" alt="">
                 </div>
-            
+
      </section>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae optio iusto hic animi officia nostrum odit ut repudiandae quisquam. Sed quidem voluptas nobis sapiente rerum nulla! Necessitatibus, adipisci eum.</p>
 
 </body>
 </html>
